--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -17,3 +17,20 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            ${{ github.actor }} created commit:
+            Commit message: ${{ github.event.commits[0].message }}
+            
+            Repository: ${{ github.repository }}
+            
+            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
+
+            GITHUB_REPOSITORY	${{repo}}
+            GITHUB_ACTOR	${{repo.namespace}}
+            GITHUB_SHA	${{commit.sha}}
+            GITHUB_REF	${{commit.ref}}
+            GITHUB_WORKFLOW	${{github.workflow}}
+            GITHUB_ACTION	${{github.action}}
+            GITHUB_EVENT_NAME	${{github.event.name}}
+            GITHUB_EVENT_PATH	${{github.event.path}}
+            GITHUB_WORKSPACE	${{github.workspace}}
