--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -25,12 +25,15 @@ jobs:
             
             See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
 
-            GITHUB_REPOSITORY	${{repo}}
-            GITHUB_ACTOR	${{repo.namespace}}
-            GITHUB_SHA	${{commit.sha}}
-            GITHUB_REF	${{commit.ref}}
             GITHUB_WORKFLOW	${{github.workflow}}
             GITHUB_ACTION	${{github.action}}
             GITHUB_EVENT_NAME	${{github.event.name}}
             GITHUB_EVENT_PATH	${{github.event.path}}
             GITHUB_WORKSPACE	${{github.workspace}}
+
+            The ${{ github.event_name }} event triggered second step.
+            show the github variable ref: ${{ github.ref }}
+            show the github variable commit: ${{ github.sha }}
+            show the github variable ref: ${{ commit.ref }}
+            show the github variable commit: ${{ commit.sha }}
+            Commit Message: ${{ github.event.head_commit.message }}
