--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -12,26 +12,15 @@ jobs:
         run: docker build -t client-cs:latest -f ./dockerfile.test .
       - name: Run Test Image
         run: docker run --rm client-cs:latest
-      - name: send default message
+      - name: Send Telegram Notification
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            ${{ github.actor }} created commit:
-            Commit message: ${{ github.event.commits[0].message }}
-            
-            Repository: ${{ github.repository }}
-            
-            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
-
-            GITHUB_WORKFLOW	${{github.workflow}}
-            GITHUB_ACTION	${{github.action}}
-            GITHUB_EVENT_NAME	${{github.event.name}}
-            GITHUB_EVENT_PATH	${{github.event.path}}
-            GITHUB_WORKSPACE	${{github.workspace}}
-
-            The ${{ github.event_name }} event triggered second step.
-            show the github variable ref: ${{ github.ref }}
-            show the github variable commit: ${{ github.sha }}
-            Commit Message: ${{ github.event.head_commit.message }}
+            WORKFLOW: ${{github.workflow}}
+            REPO: ${{ github.repository }}
+            USER: ${{ github.actor }}
+            COMMIT MESSAGE: ${{ github.event.head_commit.message }}
+            COMMIT SHA: ${{ github.sha }}
+            MORE:
