--- a/dockerfile.test
+++ b/dockerfile.test
@@ -16,6 +16,7 @@ RUN pip install -r requirements.txt
 COPY Vements/API /app/Vements/API
 COPY Vements/CLI /app/Vements/CLI
 COPY Vements/Test /app/Vements/Test
+COPY readme.md /app/readme.md
 
 ENV PORT=9000
 
