--- a/Vements/CLI/cli.csproj
+++ b/Vements/CLI/cli.csproj
@@ -5,7 +5,24 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <!-- <TargetName>vements</TargetName> -->
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+    <PackageId>Vements.CLI</PackageId>
+    <Version>0.0.0</Version>
+    <Authors>Vements Team;Contributors</Authors>
+    <Company>Monster Street Systems LLC</Company>
+    <Copyright>Copyright © 2023</Copyright>
+    <Product>vements.io</Product>
+    <PackageReadmeFile>readme.cli.md</PackageReadmeFile>
+    <PackageUrl>https://vements.io/</PackageUrl>
+    <RepositoryUrl>https://github.com/vements/client-cs</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryBranch>main</RepositoryBranch>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>icon.png</PackageIcon>
+    <Title>Vements CLI</Title>
+    <PackageDescription>Achievements and Scoreboards for Everyone</PackageDescription>
+    <PackageTags>achievements;achievement;scoreboards;scoreboard;REST;</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +31,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\API\api.csproj" />
+    <None Include="../../readme.cli.md" Pack="true" PackagePath="/" />
+
   </ItemGroup>
 
 </Project>
