--- a/dockerfile.test
+++ b/dockerfile.test
@@ -17,6 +17,7 @@ COPY Vements/API /app/Vements/API
 COPY Vements/CLI /app/Vements/CLI
 COPY Vements/Test /app/Vements/Test
 COPY readme.md /app/readme.md
+COPY readme.cli.md /app/readme.cli.md
 
 ENV PORT=9000
 
