--- a/Vements/API/api.csproj
+++ b/Vements/API/api.csproj
@@ -7,13 +7,23 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
-    <PackageId>Vements.API</PackageId>
-    <Version>0.0.3</Version>
-    <Authors>Vements Support, support@vements.io</Authors>
-    <Company>Monster Street Systems LLC</Company>
-    <Product>vements.io</Product>
-    <PackageReadmeFile>readme.md</PackageReadmeFile>
     <Title>Vements API</Title>
+    <PackageId>Vements.API</PackageId>
+    <Version>0.0.0</Version>
+    <Authors>Vements Support;Contributors</Authors>
+    <Company>Monster Street Systems LLC</Company>
+    <Copyright>Copyright © 2023</Copyright>
+    <Product>vements.io</Product>
+
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageUrl>https://vements.io/</PackageUrl>
+    <RepositoryUrl>https://github.com/vements/client-cs</RepositoryUrl>
+
+    <RepositoryType>git</RepositoryType>
+    <RepositoryBranch>main</RepositoryBranch>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>icon.png</PackageIcon>
+    
     <PackageDescription>Achievements and Scoreboards for Everyone</PackageDescription>
     <PackageTags>achievements;achievement;scoreboards;scoreboard;REST;</PackageTags>
   </PropertyGroup>
@@ -21,6 +31,7 @@
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="110.2.0" />
     <None Include="../../readme.md" Pack="true" PackagePath="/" />
+    <None Include="../../icon.png" Pack="true" PackagePath="/" />    
   </ItemGroup>
 
 </Project>
